# otus-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  allocator.cpp  async.cpp  async.h  controller.cpp  controller.h  editor.cpp  ip_filter.cpp  lib.cpp  lib.h  main.cpp  mapper.cpp  model.cpp  model.h  reducer.cpp  test_version.cpp  view.cpp  view.h
.github/workflows/: release-20-04.yml  release.yml
